fix: prevent cutting off lines on windows

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -63,7 +63,7 @@ h3 {
 input, button, select, textarea {
   font-family: inherit;
   font-size: inherit;
-  line-height: inherit;
+  line-height: normal;
 }
 
 a {
